# subsplease-dl

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml  requirements.txt  subsplease.py  xdcc.py
src/subsplease_dl/: main.py  subsplease.py  xdcc.py
