[tool.poetry]
name = "subsplease-dl"
version = "0.1.0"
description = "A simple downloader for subsplease using their irc xdcc protocol."
authors = ["thesadru <thesadru@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "subsplease_dl", from = "src" }
]

[tool.poetry.scripts]
subsplease-dl = "subsplease_dl.main:main"

[tool.poetry.dependencies]
python = "^3.9"
irc = "^20.3.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pre-commit = "^3.5.0"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"
logger-objects = ["subsplease_dl.xdcc.logger"]
extend-select = ["I"]
ignore = ["E402"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.isort]
case-sensitive = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"